name changes again

--- a/HF2/static/cars-opel.html
+++ b/HF2/static/cars-opel.html
@@ -27,7 +27,7 @@
             <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="brands.html">Márkák</a>
+                        <a class="nav-link" href="index.html">Márkák</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="cars.html">Autók</a>
